maze.lessons.maze.island.IslandMaze.scala.error
Escaper:18: error: ';' expected but 'else' found.
			} else if (getDirection() == Direction.NORD) {
                          ^Escaper:32: error: Unmatched closing brace '}' ignored here
}
^